# ezfode

./: Cargo.toml  LICENSE.txt  makerom.sh  mono_boot.ld  pins.txt  shell.nix
.cargo/: config.toml
src/: dma.rs  ezflash.rs  fs.rs  halfwidth.rs  lifont-3x5-as-8x8.img.lz77  lifont-3x5.4bpp  main.rs  sd.rs
