[package]
name = "ezfode"
version = "0.1.0"
authors = ["ashkitten"]
edition = "2021"

[dependencies]
ape-fatfs = { version = "0.2.0", default-features = false }
ape-mbr = "0.1.1"
embedded-io = "0.4.0"
gba = "0.11.2"
gpt-parser = { version = "0.0.9", features = ["no_std"] }
log = "=0.4.19"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
