[package]
name = "ezfode"
version = "0.1.0"
authors = ["ashkitten"]
edition = "2021"

[dependencies]
anstyle-parse = { version = "0.2.2", features = ["core"] }
ape-fatfs = { version = "0.2.0", default-features = false, features = ["unicode", "lfn"] }
ape-mbr = "0.1.1"
embedded-io = "0.4.0"
gba = "0.11.2"
gpt-parser = { version = "0.0.9", features = ["no_std"] }
itoa = "1.0.9"
log = { version = "=0.4.19", default-features = false }
ucs2 = "0.3.2"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
